fixing video overflow

--- a/src/app/containers/home/home.component.scss
+++ b/src/app/containers/home/home.component.scss
@@ -1,7 +1,12 @@
 @import "../../../sass-files/variables";
 
-.mj-video {
+.mj-video-holder {
   height: 100vh;
-  width: 100%;
-  object-fit: cover;
+  overflow: hidden;
+
+  .mj-video {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
 }
