--- a/src/sass-files/main.scss
+++ b/src/sass-files/main.scss
@@ -35,4 +35,9 @@ body {
   font-size: 16px;
 }
 
+a {
+  text-decoration: none;
+  color: $mj-color-white-light;
+}
+
 
